# datagovma-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/datagovma_mcp/: __init__.py  main.py
src/datagovma_mcp/tools/: __init__.py  get_dataset.py  get_dataset_facets.py  get_group.py  get_organization.py  get_resource.py  list_datasets.py  list_groups.py  list_organizations.py  search_datasets.py  search_resources.py  status.py
src/datagovma_mcp/utils/: __init__.py  ckan.py  logging_config.py  normalizers.py  server_config.py  validators.py
tests/: helpers.py  test_get_dataset.py  test_get_dataset_facets.py  test_get_group.py  test_get_organization.py  test_get_resource.py  test_list_datasets.py  test_list_groups.py  test_list_organizations.py  test_logging_config.py  test_main.py  test_search_datasets.py  test_search_resources.py  test_server_config.py  test_status.py
tools/: __init__.py  status.py
utils/: server_config.py
